--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
     <main>
         <header>
-            <h1>tx</h1>
+            <h1>free</h1>
         </header>
         <article>
-            <h2>1A</h2>
+            <h2>CSS3</h2>
             <p>tx A0</p>
         </article>
         <article>
-            <h2>2A</h2>
+            <h2>HTML5</h2>
             <p>tx A1</p>
         </article>
     </main>
