--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>free</h1>
+            <img src="curso-em-video-cor.png" alt="curso">
         </header>
         <article>
             <h2>CSS3</h2>
-            <p>tx A0</p>
+            <img class="lado" src="curso-html-css.png" alt="cull">
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
+            <p><a href="HTML.html">Acesse curso</a></p>
         </article>
         <article>
             <h2>HTML5</h2>
-            <p>tx A1</p>
+            <img class="lado" src="curso-javascript.png" alt="JS">
+            <p>O <abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
+            <p><a href="lll">Acesse o meu site</a></p>
         </article>
     </main>
 </body>
