--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>new Html</title>
     <link rel="stylesheet" href="Style.css">
+    <link rel="icon" href="Sharingan.png">
 </head>
 <body>
     <main>
