--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>new Html</title>
+    <title>New Html</title>
     <link rel="stylesheet" href="Style.css">
     <link rel="icon" href="Sharingan.png">
 </head>
 <body>
     <main>
         <header>
-            <h1>free</h1>
+            <h1>1° site oficial pessoal</h1>
             <img src="curso-em-video-cor.png" alt="curso">
         </header>
         <article>
